--- a/move_cmd/CMakeLists.txt
+++ b/move_cmd/CMakeLists.txt
@@ -24,7 +24,7 @@ generate_messages(
   std_msgs
 #  actionlib_msgs
 )
-catkin_package(CATKIN_DEPENDS message_runtime std_msgs)
+#catkin_package(CATKIN_DEPENDS message_runtime std_msgs)
 
 
 include_directories(
@@ -33,8 +33,14 @@ include_directories(
   ${Boost_INCLUDE_DIRS}
 )
 
-add_library(move_cmd_lib include/move_cmd.h src/move_cmd.cpp)
+add_library(move_cmd_lib include/move_cmd/move_cmd.h src/move_cmd.cpp)
+target_link_libraries(move_cmd_lib ${catkin_LIBRARIES})
 
 add_executable(move_cmd_test src/move_cmd.cpp)
 target_link_libraries(move_cmd_test move_cmd_lib ${catkin_LIBRARIES})
 add_dependencies(move_cmd_test ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+catkin_package(CATKIN_DEPENDS message_runtime std_msgs
+	INCLUDE_DIRS include
+	LIBRARIES move_cmd_lib
+)
