--- a/path_Planner/CMakeLists.txt
+++ b/path_Planner/CMakeLists.txt
@@ -11,8 +11,10 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs genmsg
-  message_generation  
+  message_generation
+  move_cmd
   simulator_sauvc_test
+  hammerhead_control
 )
 
 ## System dependencies are found with CMake's conventions
@@ -183,11 +185,11 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 # )
 
 ## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
+ install(DIRECTORY include/${PROJECT_NAME}/
+   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
+   PATTERN ".svn" EXCLUDE
+ )
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 # install(FILES
