--- a/path_Planner/package.xml
+++ b/path_Planner/package.xml
@@ -57,7 +57,8 @@
   <exec_depend>rospy</exec_depend>
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
- 
+  <depend>move_cmd</depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
